[package]
name = "radyns"
version = "0.1.0"
edition = "2021"

[dependencies]
boring = "4.5.0"
bytes = "1.5.0"
http = "1.0.0"
native-tls = "0.2.11"
openssl = "0.10.64"
quiche = "0.20.0"
quinn = "0.10.2"
rustls = "0.22.2"


[features]

quinn = []
quiche = []

rustls = []
openssl = []
nativessl = []
boringssl = []

ring = []
crypto = []
